--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,11 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_CALL_LOG" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_BLOCKED_NUMBERS"
+        tools:ignore="ProtectedPermissions" />
+    <uses-permission android:name="android.permission.WRITE_BLOCKED_NUMBERS"
+        tools:ignore="ProtectedPermissions" />
+
 
     <application
         android:allowBackup="true"
@@ -22,6 +27,23 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver
+            android:name=".BlockNumberReceiver"
+            android:enabled="true"
+            android:exported="false"> <intent-filter>
+            <action android:name="com.example.findnumberrobotcall.ACTION_BLOCK_NUMBER" />
+        </intent-filter>
+        </receiver>
+
+        <receiver
+            android:name=".CallActionReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.example.findnumberrobotcall.ACTION_CHECK_GEMINI_SPAM" />
+            </intent-filter>
+        </receiver>
+
 
         <service android:name=".CallScreeningReceiver"
             android:permission="android.permission.BIND_SCREENING_SERVICE"
